fixed overflow issue in header

--- a/src/Styling/App.scss
+++ b/src/Styling/App.scss
@@ -7,5 +7,9 @@
 @tailwind utilities;
 
 .background{
-    @apply bg-navy font-lato;
+    @apply bg-navy font-lato h-screen w-screen;
+}
+
+@media (max-width: 501px) {
+  
 }
