--- a/src/Styling/_header.scss
+++ b/src/Styling/_header.scss
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 .header-links{
-    @apply flex items-center place-items-center text-2xl font-semibold ml-8 text-lightest_slate;
+    @apply flex flex-1 flex-wrap place-items-center overflow-hidden;
+    @apply text-2xl font-semibold ml-8 text-lightest_slate;
     
 }
 .header-links-right{
